Spacing fixes for Mapas

--- a/stylesheets/_section.scss
+++ b/stylesheets/_section.scss
@@ -36,7 +36,7 @@
         list-style: none;
         padding-left: 0;
         a {
-          width: 150px;
+          width: 130px;
           margin-bottom: $spacing-unit;
         }
         li {
