--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -5,7 +5,10 @@
 $spacing-unit: 30px;
 
 body {
+  overflow: hidden;
+
   & > * {
+    overflow: hidden;
     background-color: $color-nil;
     border-bottom: 1px solid white;
     padding-top: $spacing-unit;
